--- a/client/sports-league/src/index.css
+++ b/client/sports-league/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navBar {
+  background-color: grey;
+  height: 45px;
+}
+
+.navBarList {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+}
+
+.navBarLink {
+  text-decoration: none;
+  color: white;
+}
+
+.navBarListItem {
+  margin-top: 11px;
+  margin-right: 100px;
+}
+
+.navBarInitialListItem {
+  margin-left: 225px;
+  margin-top: 11px;
+  margin-right: 100px;
+}
