add TableContainer and created fetch request for all clubs in 8080

--- a/client/sports-league/src/index.css
+++ b/client/sports-league/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+div ul li:hover{
+  text-shadow: 0 0 1px white;
+}
+
 .navBar {
   background-color: grey;
   height: 45px;
